--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -197,6 +197,9 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                                <connections>
+                                                    <action selector="OilNameEditingEnded:" destination="6rA-8j-U7p" eventType="editingDidEnd" id="Xgi-Mz-6Wf"/>
+                                                </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="QQx-5k-qBB">
                                                 <frame key="frameInset" minX="161" minY="95" width="210" height="30"/>
@@ -350,6 +353,9 @@
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Kfd-jy-FRU">
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="RemedyNameLostFocus:" destination="PFe-pI-FH2" eventType="editingDidEnd" id="Qpw-k8-sRN"/>
+                                                </connections>
                                             </textField>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMZ-ea-Bn1">
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1297,6 +1303,7 @@
                         <outlet property="txtWebsite" destination="1eA-7g-w7y" id="5Vp-4h-5ep"/>
                         <outlet property="viewContent" destination="8oi-jN-SZd" id="1Hf-tg-chh"/>
                         <outlet property="viewRelatedRemedies" destination="LRe-Lm-H50" id="tjK-p1-CbD"/>
+                        <segue destination="OiB-G1-D7m" kind="show" identifier="segueViewRemedyFromOils" id="EWW-Fh-Ngj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Px4-H9-zXC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2243,5 +2250,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="QYv-jo-sTt"/>
+        <segue reference="EWW-Fh-Ngj"/>
     </inferredMetricsTieBreakers>
 </document>
